# libr_spl

./: CMakeLists.txt  README.md
include/: r_spl.h  r_spl_core.h  r_spl_rap.h
src/: example.c  r_spl_core.c  r_spl_rap.c
